kube-project-demo/AngularApp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-np
  labels:
    name: frontend-service-np
spec:
  type: LoadBalancer
  ports:
    - port: 8082        
      targetPort: 80  
      nodePort: 30000   
      protocol: TCP
      name: http
  selector:
    app: frontend
